--- a/views/quotes.html
+++ b/views/quotes.html
@@ -9,7 +9,7 @@
     <body>
         <div id="wrapper" class="wrapper">
         </div>
-        <script src="../dist/index.bundle.js"></script>
+        <script src="../dist/quotes.bundle.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
