events and state hooked up

--- a/views/markdown.html
+++ b/views/markdown.html
@@ -7,8 +7,8 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="wrapper" class="wrapper">
-        </div>
+        <main id="main" class="main">
+        </main>
         <script src="../dist/markdown.bundle.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
