--- a/views/markdown.html
+++ b/views/markdown.html
@@ -11,5 +11,6 @@
         </main>
         <script src="../dist/markdown.bundle.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script> -->
     </body>
 </html>
