--- a/views/drums.html
+++ b/views/drums.html
@@ -4,11 +4,11 @@
         <link rel="stylesheet" href="../styles/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Drum Machine</title>
     </head>
     <body>
-        <div id="wrapper" class="wrapper">
-        </div>
-        <script src="../dist/quotes.bundle.js"></script>
+        <main id="main" class="main">
+        </main>
+        <script src="../dist/drums.bundle.js"></script>
     </body>
 </html>
