--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,4 +73,36 @@ body {
 .quote-box__quote {
   font-size: 1.75rem;
   margin: 1rem 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100dvw;
+  height: 100dvh;
+}
+
+.editor-wrapper {
+  width: 100%;
+  height: 50%;
+  border: 1px solid gray;
+}
+
+.editor {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+
+.preview-wrapper {
+  width: 100%;
+  height: 50%;
+  border: 1px solid gray;
+}
+
+.preview {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 }/*# sourceMappingURL=styles.css.map */
