--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,6 +79,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100dvw;
   height: 100dvh;
 }
@@ -105,4 +106,33 @@ body {
   width: 100%;
   height: 100%;
   overflow: scroll;
+}
+
+.drum-machine {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+  border: 2px solid goldenrod;
+}
+.drum-machine .drums {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.drum-machine .drums .drum-pad {
+  border: 2px solid lightblue;
+  background: white;
+  width: 5rem;
+  height: 5rem;
+}
+.drum-machine .controls {
+  width: 25%;
+}
+.drum-machine .controls .display {
+  background: lightgoldenrodyellow;
+  min-height: 2rem;
+  min-width: 100%;
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
