--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -81,6 +81,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100dvw;
     height: 100dvh;
 }
@@ -103,4 +104,32 @@ body {
     width: 100%;
     height: 100%;
     overflow: scroll;
+}
+.drum-machine{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height: 50%;
+    border: 2px solid goldenrod;
+    .drums{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+        .drum-pad{
+            border: 2px solid lightblue;
+            background: white;
+            width: 5rem;
+            height: 5rem;
+        }
+    }
+    .controls{
+        width: 25%;
+        .display{
+            background: lightgoldenrodyellow;
+            min-height: 2rem;
+            min-width: 100%;
+            text-align: center;
+        }
+    }
 }
