--- a/views/drums.html
+++ b/views/drums.html
@@ -10,5 +10,6 @@
         <main id="main" class="main">
         </main>
         <script src="../dist/drums.bundle.js"></script>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
