--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,6 +149,10 @@ body {
   color: goldenrod;
   font-weight: bold;
   font-size: 3rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 1rem;
 }
 .calculator .output-display {
   height: 15%;
@@ -156,6 +160,10 @@ body {
   color: white;
   font-weight: bold;
   font-size: 3rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 1rem;
 }
 .calculator .controls {
   height: 70%;
