--- a/views/clock.html
+++ b/views/clock.html
@@ -9,7 +9,7 @@
     <body>
         <main id="main" class="main">
         </main>
-        <script src="../dist/calculator.bundle.js"></script>
+        <script src="../dist/clock.bundle.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
