--- a/views/clock.html
+++ b/views/clock.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="../styles/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Calculator</title>
+        <title>Clock</title>
     </head>
     <body>
         <main id="main" class="main">
